unpackaged/main/default/objects/Listing__c/Listing__c.object-meta.xml
<CustomObject>
    <description>Captures annual report listing preferences for contacts and accounts</description>
    <label>Listing</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Listing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>