unpackaged/main/default/objects/Listing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>