unpackaged/main/default/objects/Listing__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <description>Heller created 2021</description>
    <label>Listing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Report - Prospect Listing</fullName>
            </value>
            <value>
                <fullName>Annual Report - Advisory Board</fullName>
            </value>
            <value>
                <fullName>Annual Report-Bequest</fullName>
            </value>
            <value>
                <fullName>Annual Report - C4 Board</fullName>
            </value>
            <value>
                <fullName>Annual Report - Honorary Trustees</fullName>
            </value>
            <value>
                <fullName>Annual Report-NC Advisory Board</fullName>
            </value>
            <value>
                <fullName>Annual Report-National Council</fullName>
            </value>
            <value>
                <fullName>Annual Report-Osprey</fullName>
            </value>
            <value>
                <fullName>Annual Report-Trustee</fullName>
            </value>
            <value>
                <fullName>Annual Report-TX Advisory Board</fullName>
            </value>
            <value>
                <fullName>MethaneSAT - Donor Recognition Name</fullName>
            </value>
            <value>
                <fullName>Annual Report - Bequest</fullName>
            </value>
            <value>
                <fullName>Annual Report - Osprey</fullName>
            </value>
            <value>
                <fullName>Annual Report - China Board</fullName>
                <isActive>false</isActive>
                <label>Annual Report - China Board</label>
            </value>
            <value>
                <fullName>Annual Report - EDF Ltd Board</fullName>
                <isActive>false</isActive>
                <label>Annual Report - EDF Ltd Board</label>
            </value>
            <value>
                <fullName>Annual Report - Economics Advisory Board</fullName>
                <isActive>false</isActive>
                <label>Annual Report - Economics Advisory Board</label>
            </value>
            <value>
                <fullName>Annual Report - NC Advisory Board</fullName>
                <isActive>false</isActive>
                <label>Annual Report - NC Advisory Board</label>
            </value>
            <value>
                <fullName>Annual Report - National Council</fullName>
                <isActive>false</isActive>
                <label>Annual Report - National Council</label>
            </value>
            <value>
                <fullName>Annual Report - Prospect Listing Entry</fullName>
                <isActive>false</isActive>
                <label>Annual Report - Prospect Listing Entry</label>
            </value>
            <value>
                <fullName>Annual Report - TX Advisory Board</fullName>
                <isActive>false</isActive>
                <label>Annual Report - TX Advisory Board</label>
            </value>
            <value>
                <fullName>Annual Report - Trustee</fullName>
                <isActive>false</isActive>
                <label>Annual Report - Trustee</label>
            </value>
            <value>
                <fullName>National Council Advisory Trustees</fullName>
                <isActive>false</isActive>
                <label>National Council Advisory Trustees</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>