unpackaged/main/default/objects/Listing__c/fields/Listing_Index__c.field-meta.xml
<CustomField>
    <fullName>Listing_Index__c</fullName>
    <description>Heller created 2021</description>
    <label>Listing Index</label>
    <type>TextArea</type>
</CustomField>