unpackaged/main/default/objects/Listing__c/fields/Listing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Listing_Notes__c</fullName>
    <description>Heller created 200</description>
    <label>Listing Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>