unpackaged/main/default/objects/Listing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Listing__c</columns>
    <columns>Listing_Entry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>